# mindcraft-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs  parser.rs  registry.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: action_manager.rs  agent.rs  conversation.rs  history.rs  lib.rs  memory_bank.rs  modes.rs  self_prompter.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  gemini.rs  lib.rs  ollama.rs  openai.rs  prompter.rs
crates/minecraft/: Cargo.toml
crates/minecraft/src/: bot.rs  lib.rs  skills.rs  world.rs
crates/server/: Cargo.toml
crates/server/src/: handlers.rs  lib.rs  state.rs
