[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/config",
    "crates/core",
    "crates/minecraft",
    "crates/llm",
    "crates/commands",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP + WebSocket
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "rustls-tls"], default-features = false }
hyper = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "5"
async-trait = "0.1"
futures = "0.3"
bytes = "1"
base64 = "0.22"
regex = "1"
once_cell = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Minecraft protocol (azalea is the Rust mineflayer equivalent)
# azalea = { version = "0.9", features = ["pathfinder"] }
# NOTE: azalea targets specific MC versions. Pin to your target:
# azalea = { git = "https://github.com/azalea-rs/azalea", rev = "..." }
# For now we define our own abstraction layer over azalea in crates/minecraft

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
