[package]
name = "mindcraft"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mindcraft"
path = "src/main.rs"

[dependencies]
mindcraft-config    = { path = "../config" }
mindcraft-core      = { path = "../core" }
mindcraft-llm       = { path = "../llm" }
mindcraft-commands  = { path = "../commands" }
mindcraft-minecraft = { path = "../minecraft" }
mindcraft-server    = { path = "../server" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
