[package]
name = "mindcraft-core"
version.workspace = true
edition.workspace = true

[dependencies]
mindcraft-config  = { path = "../config" }
mindcraft-llm     = { path = "../llm" }
mindcraft-commands = { path = "../commands" }
mindcraft-minecraft = { path = "../minecraft" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
