[package]
name = "mindcraft-llm"
version.workspace = true
edition.workspace = true

[dependencies]
mindcraft-config = { path = "../config" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
