[package]
name = "mindcraft-server"
version.workspace = true
edition.workspace = true

[dependencies]
mindcraft-config = { path = "../config" }
mindcraft-core   = { path = "../core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
